# PakInspector

./: .gitignore  PakInspector.sln  README.md  build-exe.ps1  pyproject.toml
.github/workflows/: release.yml
pakinspector/: __init__.py  __main__.py  extract.py  gui.py  i18n.py  iff_format.py  pac1.py
pakinspector/locales/: en.json  zh_CN.json
src/PakInspector/: PakInspector.csproj  PakUtils.cs  Program.cs
src/PakInspector.Parser/: Iff.g.cs  Pak.g.cs  PakInspector.Parser.csproj
src/PakInspector/Commands/: ChunksCommand.cs  PakExtractCommand.cs  PakInspectCommand.cs
src/PakInspector/Data/: PakFileEntry.cs  SourceGenerationContext.cs
