[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pakinspector"
version = "0.1.0"
description = "GUI and library to browse and extract Arma Reforger PAC1 .pak files"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "PakInspector contributors" }]
keywords = ["arma", "reforger", "pak", "pac1", "extract", "tkinter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.4"]
exe = ["pyinstaller>=6.6"]

[project.urls]
Homepage = "https://github.com/ViVi141/PakInspector"
Repository = "https://github.com/ViVi141/PakInspector"
"Original project" = "https://github.com/rvost/PakInspector"

[project.scripts]
pakinspector = "pakinspector.gui:run_app"

[tool.setuptools.packages.find]
where = ["."]
